Don't move! This is the pedantic ChangeLog format police!

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,7 +55,7 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
 
 dpkg (1.13.13) unstable; urgency=low
 
-  [Frank Lichtenheld]
+  [ Frank Lichtenheld ]
   * dpkg and dselect are now in section admin, not section base.
     Correct info in the control file.
   * Bump Standards-Version to 3.6.2 (no changes).
@@ -68,8 +68,8 @@ dpkg (1.13.13) unstable; urgency=low
 
   [ Christian Perrier ]
   * Updated Translations:
-    - Dutch (Bart Cornelis). Fix error mentioned in #323908 by Stephan 
-      Kramer
+    - Dutch (Bart Cornelis). Fix error mentioned in #323908 by
+      Stephan Kramer.
     - Japanese (Kenshi Muto). Closes: #349808
 
   [ Guillem Jover ]
