--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,284 +1,285 @@
 2005-02-09  Peter Mann  <Peter.Mann@tuke.sk>
 
-	* sk.po: updated to 1002t
+	* sk.po: Updated to 1002t.
 
 2005-02-08  Piarres Beobide Egana  <pi@beobide.net>
 
-	* eu.po: updated to 1002t
+	* eu.po: Updated to 1002t.
 
 2006-02-07  Jacobo Tarrio  <jtarrio@trasno.net>
 
-	* gl.po: updated to 1002t
+	* gl.po: Updated to 1002t.
 
 2006-02-07  Christian Perrier  <bubulle@debian.org>
 
-	* LINGUAS: Added Vietnamese
-	* vi.po:   Merge with dpkg.pot
+	* LINGUAS: Added Vietnamese.
+	* vi.po: Merge with dpkg.pot.
 
 2006-02-06  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: updated to 1002t
+	* fr.po: Updated to 1002t.
+
+2006-02-06  Guillem Jover  <guillem@debian.org>
+
+	* *.po: Merged with dpkg.pot again.
 
 2006-02-06  Guillem Jover  <guillem@debian.org>
 
 	* *.po: Merged with dpkg.pot.
 
-2006-02-06  Guillem Jover  <guillem@debian.org>
+2006-02-06  Jordi Mallach  <jordi@debian.org>
 
-	* *.po: Merged with dpkg.pot.
+	* ca.po: Updated to 1000t.
 
-2006-02-06 Jordi Mallach  <jordi@debian.org>
+2006-01-24  Kenshi Muto  <kmuto@debian.org>
 
-	* ca.po: updated to 1000t
+	* ja.po: Updated to 1000t.
 
-2006-01-24 Kenshi Muto  <kmuto@debian.org>
+2006-01-22  Clytie Siddall  <clytie@riverland.net.au>
 
-	* ja.po: updated to 1000t
+	* vi.po: Updated to 1000t.
 
-2006-01-22 Clytie Siddall  <clytie@riverland.net.au>
+2006-01-21  Yuri Kozlov  <kozlov.y@gmail.com>
 
-	* vi.po: updated to 1000t
+	* ru.po: Updated to 1000t. Closes: #349151
 
-2006-01-21 Yuri Kozlov  <kozlov.y@gmail.com>
+2006-01-18  Claus Hindsgaul  <claus_h@image.dk>
 
-	* ru.po: updated to 1000t. Closes: #349151
+	* da.po: Updated to 1000t. Closes: #348575
 
-2006-01-18 Claus Hindsgaul  <claus_h@image.dk>
+2006-01-12  Jacobo Tarrio  <jtarrio@trasno.net>
 
-	* da.po: updated to 1000t. Closes: #348575
+	* gl.po: Completed to 1000t. Closes: #338904
 
-2006-01-12 Jacobo Tarrio  <jtarrio@trasno.net>
+2006-01-09  Stefano Melchior  <stefano.melchior@openlabs.it>
 
-	* gl.po: completed to 1000t. Closes: #338904
+	* it.po: Minor correction.
 
-2006-01-09 Stefano Melchior  <stefano.melchior@openlabs.it>
+2005-12-31  Miroslav Kure  <kurem@upcase.inf.upol.cz>
 
-	* it.po: minor correction.
+	* cs.po: Updated to 1000t.
 
-2005-12-31 Miroslav Kure  <kurem@upcase.inf.upol.cz>
+2005-12-25  Stefano Canepa  <sc@linux.it>
 
-	* cs.po: updated to 1000t
+	* it.po: Updated to 1000t.
 
-2005-12-25 Stefano Canepa  <sc@linux.it>
+2005-12-25  Emmanuel Galatoulas
 
-	* it.po: updated to 1000t
+	* el.po: Updated to 1000t.
 
-2005-12-25 Emmanuel Galatoulas
+2005-12-23  Parlin Imanuel  <pt@samip-online.com>
 
-	* el.po: updated to 1000t
+	* id.po: Updated to 1000t.
 
-2005-12-23 Parlin Imanuel  <pt@samip-online.com>
+2005-12-23  Clytie Siddall  <clytie@riverland.net.au>
 
-	* id.po: updated to 1000t
+	* vi.po: Updated to 992t8f.
 
-2005-12-23 Clytie Siddall  <clytie@riverland.net.au>
+2005-12-22  Eddy Petrisor  <eddy.petrisor@gmail.com>
 
-	* vi.po: updated to 992t8f
+	* ro.po: Updated to 998t2f.
 
-2005-12-22 Eddy Petrisor  <eddy.petrisor@gmail.com>
+2005-12-22  Jacobo Tarrio  <jtarrio@trasno.net>
 
-	* ro.po: updated to 998t2f
+	* gl.po: Updated to 718t79f203u (no translation for dselect).
 
-2005-12-22 Jacobo Tarrio  <jtarrio@trasno.net>
+2005-12-22  Kov Tchai  <tchaikov@sjtu.edu.cn>
 
-	* gl.po: updated to 718t79f203u (no translation for dselect)
+	* zh_CN.po: Updated to 999t1f.
 
-2005-12-22 Kov Tchai  <tchaikov@sjtu.edu.cn>
+2005-12-22  eric pareja  <xenos@upm.edu.ph>
 
-	* zh_CN.po: updated to 999t1f
+	* tl.po: Updated to 1000t.
 
-2005-12-22 eric pareja  <xenos@upm.edu.ph>
+2005-12-22  pi  <pi@beobide.net>
 
-	* tl.po: updated to 1000t
+	* eu.po: Updated to 1000t.
 
-2005-12-22 pi  <pi@beobide.net>
+2005-12-22  Jordi Mallach  <jordi@debian.org>
 
-	* eu.po: updated to 1000t
+	* ca.po: Updated to 998t2f.
 
-2005-12-22 Jordi Mallach  <jordi@debian.org>
+2005-12-22  Stefano Canepa  <sc@linux.it>
 
-	* ca.po: updated to 998t2f
+	* it.po: Updated to 998t2f.
 
-2005-12-22 Stefano Canepa  <sc@linux.it>
+2005-12-22  Michael Piefel  <piefel@debian.org>
 
-	* it.po: updated to 998t2f
+	* de.po: Updated to 998t2f.
 
-2005-12-22 Michael Piefel  <piefel@debian.org>
+2005-12-22  Bart Cornelis   <cobaco@linux.be>
 
-	* de.po: updated to 998t2f
+	* nl.po: Updated to 998t2f.
 
-2005-12-22 bart Cornelis   <cobaco@linux.be>
+2005-12-22  Claus Hindsgaul  <claus_h@image.dk>
 
-	* nl.po: updated to 998t2f
+	* da.po: Updated to 1000t.
 
-2005-12-22 Claus Hindsgaul  <claus_h@image.dk>
+2005-12-22  Javier Fernández-Sanguino Peña  <jfs@computer.org>
 
-	* da.po: updated to 1000t
+	* es.po: Updated to 998t2f.
 
-2005-12-22 Javier Fernández-Sanguino Peña  <jfs@computer.org>
+2005-12-22  Håvard Korsvoll  <korsvoll@skulelinux.no>
 
-	* es.po: updated to 998t2f
+	* nn.po: Updated to 999t1f.
 
-2005-12-22 Håvard Korsvoll  <korsvoll@skulelinux.no>
+2005-12-22  Miguel Figueiredo  <elmig@debianpt.org>
 
-	* nn.po: updated to 999t1f
-
-2005-12-22 Miguel Figueiredo  <elmig@debianpt.org>
-
-	* pt.po: updated to 974t24f2u
+	* pt.po: Updated to 974t24f2u.
 
 2005-12-22 Peter Karlsson  <peter@softwolves.pp.se>
 
-	* sv.po: updated to 1000t
+	* sv.po: Updated to 1000t.
 
-2005-10-22 Christian Perrier  <bubulle@debian.org>
+2005-10-22  Christian Perrier  <bubulle@debian.org>
 
-	* *.po: merged with dpkg.pot
+	* *.po: Merged with dpkg.pot.
 
-2005-10-22 Yuri Kozlov  <kozlov.y@gmail.com>
+2005-10-22  Yuri Kozlov  <kozlov.y@gmail.com>
 
-	* ru.po: completed
+	* ru.po: Completed.
 
-2005-10-22 Christian Perrier  <bubulle@debian.org>
+2005-10-22  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: completed
+	* fr.po: Completed.
 
-2005-10-22 Christian Perrier  <bubulle@debian.org>
+2005-10-22  Christian Perrier  <bubulle@debian.org>
 
-	* dpkg.pot: re-generated from sources
+	* dpkg.pot: Re-generated from sources.
 
-2005-10-11 Christian Perrier  <bubulle@debian.org>
+2005-10-11  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: completed
+	* fr.po: Completed.
 
-2005-10-11 Christian Perrier  <bubulle@debian.org>
+2005-10-11  Christian Perrier  <bubulle@debian.org>
 
-	* *.po: updated from sources
+	* *.po: Updated from sources.
 
-2005-09-01 James Troup  <james@nocrew.org>
+2005-09-01  James Troup  <james@nocrew.org>
 
-	* pt_BR.po: obvious error corrected thanks to James deep knowledge of Portuguese
+	* pt_BR.po: Obvious error corrected thanks to James deep knowledge
+	of Portuguese.
 
-2005-09-01 Christian Perrier  <bubulle@debian.org>
+2005-09-01  Christian Perrier  <bubulle@debian.org>
 
-	* *.po: Project-Id-Version forced to "dpkg 1.13"
+	* *.po: Project-Id-Version forced to "dpkg 1.13".
 
-2005-08-26 Andre Luis Lopes  <andrelop@debian.org>
+2005-08-26  Andre Luis Lopes  <andrelop@debian.org>
 
-	* pt_BR.po: Updated (999t)
+	* pt_BR.po: Updated (999t).
 
-2005-08-22 Kenshi Muto  <kmuto@debian.org>
+2005-08-22  Kenshi Muto  <kmuto@debian.org>
 
-	* ja.po: Updated (999t)
+	* ja.po: Updated (999t).
 
-2005-08-22 Yuri Kozlov  <yuray@id.ru>
+2005-08-22  Yuri Kozlov  <yuray@id.ru>
 
-	* ru.po: Updated (999t)
+	* ru.po: Updated (999t).
 
 2005-08-22  Miroslav Kure  <kurem@upcase.inf.upol.cz>
 
-	* cs.po: Updated (999t)
+	* cs.po: Updated (999t).
 
 2005-08-22  Hans Fredrik Nordhaug  <hans@nordhaug.priv.no>
 
-	* nb.po: Updated (999t)
+	* nb.po: Updated (999t).
 
 2005-08-22  Bartosz Fenski  <fenio@debian.org>
 
-	* pl.po: Updated (999t)
+	* pl.po: Updated (999t).
 
 2005-08-19  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Completed (999t)
+	* fr.po: Completed (999t).
 
 2005-08-17  Christian Perrier  <bubulle@debian.org>
 
-	* *.po: Updated with the dpkg.pot file
+	* *.po: Updated with the dpkg.pot file.
 
 2005-07-06  Parlin Imanuel  <parlin_i@yahoo.com>
 
-	* id.po: Updated
+	* id.po: Updated.
 
 2005-06-19  Claus Hindsgaul  <claus_h@image.dk>
 
-	* da.po: Completed
+	* da.po: Completed.
 
 2005-06-19  Greek translation team  <debian-l10n-greek@lists.debian.org>
 
-	* el.po: Completed (one fuzzy left)
+	* el.po: Completed (one fuzzy left).
 
 2005-06-14  Miroslav Kure  <kurem@upcase.inf.upol.cz>
 
-	* cs.po: Completed
+	* cs.po: Completed.
 
 2005-06-15  Jens Seidel  <jensseidel@users.sf.net>
 
-	* de.po: automatically spellchecked
+	* de.po: automatically spellchecked.
 
 2005-06-14  Christian Perrier  <bubulle@debian.org>
 
-	* LINGUAS: De-activate Hebrew
+	* LINGUAS: De-activate Hebrew.
 
 2005-06-14  Lele Gaifax  <lele@nautilus.homeip.net>
 
-	* it.po: Completed
+	* it.po: Completed.
 
 2005-06-14  Yuri Kozlov  <yuray@id.ru>
 
-	* ru.po: Completed
+	* ru.po: Completed.
 
 2005-06-14  Piarres Beobide Egana  <pi@beobide.net>
 
-	* eu.po: Completed
+	* eu.po: Completed.
 
 2005-06-14  Kenshi Muto  <kmuto@debian.org>
 
-	* ja.po: Completed
+	* ja.po: Completed.
 
 2005-06-14  Jordi Mallach  <jordi@debian.org>
 
-	* ca.po: Completed
+	* ca.po: Completed.
 
 2005-06-13  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Completed
+	* fr.po: Completed.
 
 2005-05-25  Eddy Petrisor  <eddy.petrisor@gmail.com>
 
-	* ro.po: Nearly complete translation..:-)
+	* ro.po: Nearly complete translation. :-)
 
 2005-05-22  Eddy Petrisor  <eddy.petrisor@gmail.com>
 
-	* ro.po: Better translation
+	* ro.po: Better translation.
 
 2005-05-19  Eddy Petrisor  <eddy.petrisor@gmail.com>
 
-	* ro.po: Add translation
-	* LINGUAS: Add Romanian to the language list
+	* ro.po: Add translation.
+	* LINGUAS: Add Romanian to the language list.
 
 2005-03-30  Eric Pareja  <xenos@upm.edu.ph>
 
-	* tl.po: Add translation
-	* LINGUAS: Add Tagalog to the language list
+	* tl.po: Add translation.
+	* LINGUAS: Add Tagalog to the language list.
 
 2005-03-30  Christian Perrier  <bubulle@debian.org>
 
 	* dpkg.pot: Regenerated
-	* *.po: Updated
-	* fr.po: Complete translation
+	* *.po: Updated.
+	* fr.po: Complete translation.
 
 2005-03-18  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Completed
+	* fr.po: Completed.
 
 2005-03-18  Christian Perrier  <bubulle@debian.org>
 
-	* dpkg.pot: Regenerated
-	* *.po: Updated
+	* dpkg.pot: Regenerated.
+	* *.po: Updated.
 
 2005-03-18  Arief S Fitrianto  <arief@gurame.fisika.ui.ac.id>
 
-	* id.po: Completed from 1.10 branch (2nd try)
+	* id.po: Completed from 1.10 branch (2nd try).
 
 2005-03-18  Scott James Remnant  <scott@netsplit.com>
 
@@ -286,7 +287,7 @@
 
 2005-03-08  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Missing space added
+	* fr.po: Missing space added.
 
 2005-03-03  Arief S Fitrianto  <arief@gurame.fisika.ui.ac.id>
 
@@ -294,27 +295,27 @@
 
 2005-02-20  Konstantinos Margaritis  <markos@debian.org>
 
-	* el.po: Updated again (complete)
+	* el.po: Updated again (complete).
 
 2005-02-19  Konstantinos Margaritis  <markos@debian.org>
 
-	* el.po: Updated
+	* el.po: Updated.
 
 2005-02-06  Carlos Liu  <carlos_liu@yahoo.com>
 
-	* zh_CN.po: Updated
+	* zh_CN.po: Updated.
 
 2005-02-05  Jacobo Tarrio  <jtarrio@trasno.net>
 
-	* gl.po: Updated
+	* gl.po: Updated.
 
 2005-02-05  Asho Yeh  <asho@ms44.url.com.tw>
 
-	* zh_TW.po: Updated
+	* zh_TW.po: Updated.
 
 2005-01-28  Seo Sanghyeon  <tinuviel@sparcs.kaist.ac.kr>
 
-	* ko.po: Completed
+	* ko.po: Completed.
 
 2005-01-25  Christian Perrier  <bubulle@debian.org>
 
