Document about the default log file, the behaviour in case of multple --log options and add a reference to dpkg.cfg manpage in the dpkg manpage. Thanks to James R. Van Zandt. Closes: #350440

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Add command descriptions in the synopis, and add a usage example for
     -f in the dpkg-query manpage. Thanks for the initial patch to
     Philippe Batailler. Closes: #352091
+  * Document about the default log file, the behaviour in case of multple
+    --log options and add a reference to dpkg.cfg manpage in the dpkg manpage.
+    Thanks to James R. Van Zandt. Closes: #350440
 
   [ Frank Lichtenheld ]
   * Let dpkg-source ignore comments in the hunk header as used by
