--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-10  James R. Van Zandt  <jrvz@comcast.net>
+
+	* man/C/dpkg.1: Document the default log file. The behaviour in case
+	of multiple --log options. And add a reference to dpkg.cfg manpage.
+
 2006-02-10  Philippe Batailler  <philippe.batailler@free.fr>,
 	    Guillem Jover  <guillem@debian.org>
 
