On package configuration, differentiate between modified and deleted configuration files (Ian Jackson). Closes: #351361

--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     by creating new files in a secure manner. Closes: #178839, #338591
   * Fix some semantic errors in dpkg-shlibdeps due to typos in used
     variables.
+  * On package configuration, differentiate between modified and
+    deleted configuration files (Ian Jackson). Closes: #351361
 
   [ Christian Perrier ]
   * Switch to po4a for manpages translation. Closes: #320122
