Let dpkg-source -x touch all patched files to have the same timestamp to mitigate time-skew problems (Denis Barbier). Closes: #105750

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2006-02-10  Ian Jackson <iwj@ubuntu.com>
+2006-02-10  Denis Barbier  <barbier@linuxfr.org>
+
+	* scripts/dpkg-source.pl: Touch all patched files
+	to have the same timestamp. This should mitigate
+	time-skew problems until we can finally add proper
+	timestamps to the diffs.
+
+2006-02-10  Ian Jackson  <iwj@ubuntu.com>
 
 	* src/configure.c: Differentiate between modified
 	and deleted configuration files. Gives and more
