Add .git directory to default dpkg-source -i regex. Suggested by Hans Ulrich Niedermann. Closes: #351885

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-11  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-source.pl: Add .git to
+	$diff_ignore_default_regexp
+
 2006-02-10  Denis Barbier  <barbier@linuxfr.org>
 
 	* scripts/dpkg-source.pl: Touch all patched files
