--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     more complex setups (Julian Gilbey). Closes: #163061
   * Add files and dirs used by bzr to default dpkg-source -i regex
     (maximilian attems). Closes: #345164
+  * Add .git directory to default dpkg-source -i regex.
+    Suggested by Hans Ulrich Niedermann. Closes: #351885
   * dpkg-scanpackages can now output Packages files with multiple
     versions of a single package (Don Armstrong). Closes: #229589.
   * dpkg-scanpackages outputs help when given the --help or -h option
