Strip any newlines from Uploaders field on dpkg-source -b. Closes: #254449

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
 2006-02-11  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-source.pl: Add .git to
-	$diff_ignore_default_regexp
+	$diff_ignore_default_regexp.
+
+	* scripts/dpkg-source.pl: Remove any
+	newlines from Uploaders field to allow
+	people to make it multi-line in the
+	source package.
 
 2006-02-10  Denis Barbier  <barbier@linuxfr.org>
 
