--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Let dpkg-source -x touch all patched files to have the same
     timestamp to mitigate time-skew problems (Denis Barbier).
     Closes: #105750
+  * Strip any newlines from Uploaders field on dpkg-source -b.
+    Closes: #254449
 
   [ Christian Perrier ]
   * Switch to po4a for manpages translation. Closes: #320122
