--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-11  Frank Lichtenheld  <djpig@debian.org>
+
+	* *.po: Merge with dpkg.pot.
+
 2006-02-09  Peter Mann  <Peter.Mann@tuke.sk>
 
 	* sk.po: Updated to 1002t.
