--- a/debian/changelog
+++ b/debian/changelog
@@ -56,7 +56,7 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
 
   [ Christian Perrier ]
   * Switch to po4a for manpages translation. Closes: #320122
-    This adds a Build6Depends on po4a
+    This adds a Build-Depends on po4a
   * Add Vietnamese to po/LINGUAS as it was previously missing
   * Updated Translations:
     - Catalan (Jordi Mallach). Closes: #351587
