Use a sane default for the addenda position: place the addendum at the end of the man page.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-11  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* man/*/*.addendum: use a generic position to insert the addenda,
+	which should always exist in a valid man page.
+	Translators are free to use another position.
+
 2006-02-11  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-source.pl: Add .git to
