Oops, some (most) addenda were named *.addenum instead of *.addendum

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* man/*/*.addendum: use a generic position to insert the addenda,
 	which should always exist in a valid man page.
 	Translators are free to use another position.
+	* man/*/*.addenum: renamed man/*/*.addendum: 
 
 2006-02-11  Frank Lichtenheld  <djpig@debian.org>
 
