--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-11  Peter Mann  <Peter.Mann@tuke.sk>
+
+	* sk.po: Updated to 1011t.
+
 2006-02-11  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 1011t
