Updated french translation of manpages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-02-11  Philippe Batailler  <philippe.batailler@free.fr>
+
+	* Updated_french_translation.
+	  man/fr/dpkg.1.fr.po
+	  man/fr/dpkg-query.1.fr.po
+	  man/fr/dpkg-source.1.fr.po
+	  man/fr/dpkg-split.1.fr.po
+	
 2006-02-11  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* man/*/*.addendum: use a generic position to insert the addenda,
