The raise of the dots.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -8,7 +8,7 @@
 
 2006-02-11  Clytie Siddall  <clytie@riverland.net.au>
 
-	* vi.po: Updated to 1011t
+	* vi.po: Updated to 1011t.
 
 2006-02-11  Frank Lichtenheld  <djpig@debian.org>
 
