--- a/debian/changelog
+++ b/debian/changelog
@@ -56,11 +56,11 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
 
   [ Christian Perrier ]
   * Switch to po4a for manpages translation. Closes: #320122
-    This adds a Build-Depends on po4a
-  * Add Vietnamese to po/LINGUAS as it was previously missing
+    This adds a Build-Depends on po4a.
+  * Add Vietnamese to po/LINGUAS as it was previously missing.
   * Updated Translations:
     - Catalan (Jordi Mallach). Closes: #351587
-    - French (Christian Perrier): 1011t
+    - French (Christian Perrier): 1011t.
     - Galician (Jacobo Tarrio): 1002t. Closes: #351795
     - Basque (Piarres Beobide): 1002t. Closes: #351845
     - Slovak (Peter Mann): 1002t. Closes: #352087, #352311
