Escape ` and ' in manpages otherwise they are converted to quotation marks, which makes cut and paste not work. Thanks to Denis Barbier. Closes: #349925

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Document about the default log file, the behaviour in case of multple
     --log options and add a reference to dpkg.cfg manpage in the dpkg manpage.
     Thanks to James R. Van Zandt. Closes: #350440
+  * Escape ` and ' in manpages otherwise they are converted to quotation
+    marks, which makes cut and paste not work. Thanks to Denis Barbier.
+    Closes: #349925
 
   [ Frank Lichtenheld ]
   * Let dpkg-source ignore comments in the hunk header as used by
