--- a/man/C/dpkg-name.1
+++ b/man/C/dpkg-name.1
@@ -3,8 +3,7 @@
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
-.\" Time-stamp: <96/05/03 14:00:06 root>
-.TH dpkg\-name 1 "May 1996" "Debian Project" "dpkg utilities"
+.TH dpkg\-name 1 "2006-02-11" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-name \- rename Debian packages to full package names
 .SH SYNOPSIS
@@ -30,12 +29,12 @@ The file `bar\-foo.deb' will be renamed to bar\-foo_1.0\-2_i386.deb or
 something similar (depending on whatever information is in the control
 part of `bar\-foo.deb').
 .TP
-.B find /root/debian/ \-name '*.deb' | xargs \-n 1 dpkg\-name \-a
+.B find /root/debian/ \-name \(aq*.deb\(aq | xargs \-n 1 dpkg\-name \-a
 All files with the extension `deb' in the directory /root/debian and its
 subdirectory's will be renamed by dpkg\-name if required into names with no
 architecture information.
 .TP
-.B find \-name '*.deb' | xargs \-n 1 dpkg\-name \-a \-o \-s \-c
+.B find \-name \(aq*.deb\(aq | xargs \-n 1 dpkg\-name \-a \-o \-s \-c
 .B Don't do this.
 Your archive will be messed up completely because a lot of packages
 don't come with section information.
