--- a/man/C/dpkg-query.1
+++ b/man/C/dpkg-query.1
@@ -1,4 +1,4 @@
-.TH dpkg\-query 1 "2006-02-10" "Debian Project" "dpkg suite"
+.TH dpkg\-query 1 "2006-02-11" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-query \- a tool to query the dpkg database
 .
@@ -49,7 +49,7 @@ list all package names starting with \*(lqlibc6\*(rq:
 
 .T
 .nf
-  \fBdpkg\-query \-l 'libc6*'\fP
+  \fBdpkg\-query \-l \(aqlibc6*\(aq\fP
 .fi
 
 The output format of this option is not configurable, but varies
