Update date of changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -69,7 +69,7 @@ dpkg (1.13.14) experimental; urgency=low
     - Slovak (Peter Mann): 1002t. Closes: #352087, #352311
     - Vietnamese (Clytie Siddal): 1011t. Closes: #352307
 
- -- Christian Perrier <bubulle@debian.org>  Sat, 11 Feb 2006 10:01:13 +0100
+ -- Frank Lichtenheld <djpig@debian.org>  Sun, 12 Feb 2006 02:32:12 +0100
 
 dpkg (1.13.13) unstable; urgency=low
 
