--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2006-02-12  Frank Lichtenheld  <djpig@debian.org>
 
+	* configure.ac: Bump version to 1.13.15~
+
 	* configure.ac: Release 1.13.14.
 
 2006-02-11  Denis Barbier  <barbier@debian.org>
