--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.13.15~) UNRELEASED; urgency=low
+
+  * 
+
+ -- Frank Lichtenheld <djpig@debian.org>  Sun, 12 Feb 2006 02:44:24 +0100
+
 dpkg (1.13.14) experimental; urgency=low
 
   [ Guillem Jover ]
