--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-13  Jordi Mallach  <jordi@debian.org>
+
+	* src/processarc.c (process_archive): Add missing closing parenthesis
+	in a string.
+
 2006-02-12  Frank Lichtenheld  <djpig@debian.org>
 
 	* configure.ac: Bump version to 1.13.15~
