--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ dpkg (1.13.15~) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Add a missing closing parenthesis in a dpkg string (Jordi Mallach).
+  * Updated Translations:
+    - Catalan (Jordi Mallach).
 
  -- Frank Lichtenheld <djpig@debian.org>  Sun, 12 Feb 2006 02:44:24 +0100
 
