--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-13  Jordi Mallach  <jordi@debian.org>
+
+	* ca.po: Updated to 1011t.
+
 2006-02-11  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 1011t.
