--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-13  Andre Luis Lopes  <andrelop@debian.org>
+
+	* pt_BR.po: Updated to 1011t.
+
 2006-02-13  Jordi Mallach  <jordi@debian.org>
 
 	* ca.po: Updated to 1011t.
