--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-02-11 02:12+0100\n"
-"PO-Revision-Date: 2006-02-07 15:43+0100\n"
+"PO-Revision-Date: 2006-02-11 22:52+0100\n"
 "Last-Translator: Jacobo Tarrío <jtarrio@debian.org>\n"
 "Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -1529,13 +1529,13 @@ msgstr ""
 " ==> Modificado (por vostede ou un script) trala instalación.\n"
 
 #: src/configure.c:570
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " ==> Deleted (by you or by a script) since installation.\n"
 msgstr ""
 "\n"
-" ==> Modificado (por vostede ou un script) trala instalación.\n"
+" ==> Borrado (por vostede ou un script) trala instalación.\n"
 
 #: src/configure.c:573
 #, c-format
@@ -2177,21 +2177,20 @@ msgstr "dpkg: ... semella que iso foi ben.\n"
 
 #: src/help.c:447
 msgid "unlink"
-msgstr ""
+msgstr "borrar"
 
 #: src/help.c:461
-#, fuzzy
 msgid "chmod"
-msgstr "reter"
+msgstr "cambiar os permisos de"
 
 #: src/help.c:477 src/processarc.c:701
 msgid "delete"
-msgstr ""
+msgstr "borrar"
 
 #: src/help.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "failed to %s `%%.255s'"
-msgstr "non se puido cambiar a \"%.255s\""
+msgstr "non se puido %s \"%%.255s\""
 
 #: src/help.c:493 dpkg-deb/info.c:54
 msgid "failed to exec rm for cleanup"
@@ -2800,42 +2799,44 @@ msgid "dpkg-deb: zap possible trailing zeros"
 msgstr "dpkg-deb: a borrar os posibles ceros finais"
 
 #: src/processarc.c:611
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - could not stat old file `%.250s' so not deleting it: %s"
-msgstr "dpkg: aviso - non se pode borrar o ficheiro antigo \"%.250s\": %s\n"
+msgstr ""
+"dpkg: aviso - non se pode atopar o ficheiro antigo \"%.250s\", así que non "
+"se borra: %s"
 
 #: src/processarc.c:619
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - unable to delete old directory `%.250s': %s\n"
-msgstr "dpkg: aviso - non se pode borrar o ficheiro antigo \"%.250s\": %s\n"
+msgstr "dpkg: aviso - non se pode borrar o directorio antigo \"%.250s\": %s\n"
 
 #: src/processarc.c:623
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old conffile `%.250s' was an empty directory (and has now "
 "been deleted)\n"
 msgstr ""
-"dpkg: %s: aviso - o ficheiro de configuración \"%.250s\" non é un ficheiro "
-"normal ou ligazón simbólica (= \"%s\")\n"
+"dpkg: aviso - o ficheiro de configuración antigo \"%.250s\" era un "
+"directorio baleiro (e borrouse agora)\n"
 
 #: src/processarc.c:653
-#, fuzzy, c-format
+#, c-format
 msgid "unable to stat other new file `%.250s'"
-msgstr "non se atopou o ficheiro de partes \"%.250s\""
+msgstr "non se atopou outro ficheiro novo \"%.250s\""
 
 #: src/processarc.c:664
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s'"
 msgstr ""
-"dpkg: %s: aviso - o ficheiro de configuración \"%.250s\" non é un ficheiro "
-"normal ou ligazón simbólica (= \"%s\")\n"
+"dpkg: aviso - o ficheiro antigo \"%.250s\" é o mesmo que varios ficheiros "
+"novos (\"%.250s\" e \"%.250s\""
 
 #: src/processarc.c:705
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - unable to %s old file `%%.250s': %%s\n"
-msgstr "dpkg: aviso - non se pode borrar o ficheiro antigo \"%.250s\": %s\n"
+msgstr "dpkg: aviso - non se pode %s o ficheiro antigo \"%%.250s\": %%s\n"
 
 #: src/processarc.c:731 src/processarc.c:972 src/remove.c:286
 msgid "cannot read info directory"
@@ -6086,3 +6087,4 @@ msgstr "non se pode executar mksplit"
 #~ "Pública Xeral de GNU (GNU GPL) versión 2 ou posterior para as condicións "
 #~ "de\n"
 #~ "copia. NON hai garantía. Vexa dpkg-split --licence para detalles.\n"
+
