--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ dpkg (1.13.15~) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Updated Translations:
     - Brazilian Portuguese (Andre Luis Lopes). Closes: #352432
+    - Galician (Jacobo Tarrio). Closes: #352443
 
- -- Frank Lichtenheld <djpig@debian.org>  Sun, 12 Feb 2006 02:44:24 +0100
+ -- Christian Perrier <bubulle@debian.org>  Mon, 13 Feb 2006 20:09:22 +0100
 
 dpkg (1.13.14) experimental; urgency=low
 
