Swedish translation updated

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-13  Daniel Nylander  <info@danielnylander.se>
+
+	* po/sv.po updated.
+
 2006-02-13  Jordi Mallach  <jordi@debian.org>
 
 	* src/processarc.c (process_archive): Add missing closing parenthesis
