initial hu.po added

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.13.15~) UNRELEASED; urgency=low
 
+  [sas-guest]
+  * initial po/hu.po added
+
   [ Guillem Jover ]
   * Add a missing closing parenthesis in a dpkg string (Jordi Mallach).
   * Updated Translations:
