updated pt translation

--- a/po/pt.po
+++ b/po/pt.po
@@ -2,14 +2,12 @@
 # Copyright (C) 2004 Free Software Foundation, Inc.
 # Miguel Figueiredo <elmig@debianpt.org>, 2004.
 #
-# 2005-09-25 - Miguel Figueiredo <elmig@debianpt.org> - 9f1u
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-02-11 02:12+0100\n"
-"PO-Revision-Date: 2005-09-25 09:35+0000\n"
+"PO-Revision-Date: 2006-02-11 17:33+0000\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -59,29 +57,29 @@ msgid "Signal no.%d"
 msgstr "Sinal num.%d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "erro interno do gzip: `%s'"
+msgstr "%s: erro interno de gzip: `%s'"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, fc-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "falhou executar gzip -dc"
+msgstr "%s: falhou executar gzip -dc"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "erro interno do gzip: `%s'"
+msgstr "%s: erro interno de bzip2: `%s'"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, fc-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "falhou executar gzip -dc"
+msgstr "%s: falhou executar bzip2 -dc"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: sem loop de compressão de cópia"
+msgstr "%s: descompressão"
 
 #: lib/compression.c:128
 #, c-format
@@ -104,14 +102,14 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: falhou executar gzip %s"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: erro interno de gzip: read: `%s'"
+msgstr "%s: erro interno de bzip2: read: `%s'"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: erro interno de gzip: write: `%s'"
+msgstr "%s: erro interno de bzip2: write: `%s'"
 
 #: lib/compression.c:184
 #, fuzzy, c-format
@@ -119,14 +117,14 @@ msgid "%s: internal bzip2 error: read(%i) != write(%i)"
 msgstr "%s: erro interno de gzip: read(%i) != write(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: falhou executar gzip %s"
+msgstr "%s: falhou executar bzip2 %s"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: sem loop de compressão de cópia"
+msgstr "%s: compressão"
 
 #: lib/database.c:125
 #, c-format
@@ -237,14 +235,14 @@ msgid "unable to install updated status of `%.250s'"
 msgstr "não foi possível instalar o status actualizado de `%.250s'"
 
 #: lib/dbmodify.c:301
-#, fuzzy, c-format
+#, c-format
 msgid "couldn't open log `%s': %s\n"
-msgstr "não pode abrir ficheiro de debug `%.255s'\n"
+msgstr "não pode abrir o log `%s': %s\n"
 
 #: lib/dump.c:266
-#, fuzzy, c-format
+#, c-format
 msgid "failed to write details of `%.50s' to `%.250s'"
-msgstr "falhou a escrita do registo %s cerca de `%.50s' a `%.250s'"
+msgstr "falhou escrever os detalhes de `%.50s' a `%.250s'"
 
 #: lib/dump.c:293
 #, c-format
@@ -973,9 +971,9 @@ msgid "Replacing files in old package %s ...\n"
 msgstr "Substituindo ficheiros no pacote antigo %s ...\n"
 
 #: src/archives.c:502
-#, fuzzy, c-format
+#, c-format
 msgid "Replaced by files in installed package %s ...\n"
-msgstr "Substituindo ficheiros no pacote antigo %s ...\n"
+msgstr "Substituído por ficheiros no pacote instalado %s ...\n"
 
 #: src/archives.c:508
 #, c-format
@@ -1241,9 +1239,9 @@ msgid "unable to restore backup version of `%.250s'"
 msgstr "não foi possível restaurar versão de backup de `%.250s'"
 
 #: src/cleanup.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "unable to remove newly-installed version of `%.250s'"
-msgstr "não foi possível remover versão de `%.250s' recentemente extraída"
+msgstr "não foi possível remover a versão acabada de instalar de `%.250s'"
 
 #: src/cleanup.c:101
 #, c-format
@@ -1511,13 +1509,13 @@ msgstr ""
 " ==> Modificado (por si ou por um script) desde a instalação.\n"
 
 #: src/configure.c:570
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " ==> Deleted (by you or by a script) since installation.\n"
 msgstr ""
 "\n"
-" ==> Modificado (por si ou por um script) desde a instalação.\n"
+" ==> Apagado (por si ou por um script) desde a instalação.\n"
 
 #: src/configure.c:573
 #, c-format
@@ -2170,42 +2168,41 @@ msgstr "dpkg: ... parece que tudo correu bem.\n"
 
 #: src/help.c:447
 msgid "unlink"
-msgstr ""
+msgstr "unlink"
 
 #: src/help.c:461
-#, fuzzy
 msgid "chmod"
-msgstr "manter"
+msgstr "chmod"
 
 #: src/help.c:477 src/processarc.c:701
 msgid "delete"
-msgstr ""
+msgstr "delete"
 
 #: src/help.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "failed to %s `%%.255s'"
-msgstr "o chdir para `%.255s' falhou"
+msgstr "o %s falhou `%.255s'"
 
 #: src/help.c:493 dpkg-deb/info.c:54
 msgid "failed to exec rm for cleanup"
 msgstr "falhou executar rm para limpeza"
 
 #: src/main.c:44
-#, fuzzy, c-format
+#, fc-format
 msgid "Debian `%s' package management program version %s.\n"
-msgstr "' versão de programa de gestão de pacotes "
+msgstr "Debian `%s' programa de gestão de pacotes versão %s.\n"
 
 #: src/main.c:46 src/query.c:461 dselect/main.cc:157 dpkg-deb/main.c:48
 #: dpkg-split/main.c:41
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 "See %s --license for copyright and license details.\n"
 msgstr ""
-"Isto é software livre; veja a Licença GNU General Public Licence versão 2 \n"
-"ou posterior para condições de cópia. Não existe NENHUMA garantia.\n"
-"Veja os detalhes em dpkg-deb --licence.\n"
+"Isto é software livre; veja a GNU General Public Licence versão 2 ou\n"
+"posterior para condições de cópia. Não existe NENHUMA garantia.\n"
+"Veja %s --license para detalhes de copyright e licença.\n"
 
 #: src/main.c:57
 #, fuzzy, c-format
@@ -2814,28 +2811,29 @@ msgid "dpkg-deb: zap possible trailing zeros"
 msgstr "dpkg-deb: zap possível rasto de zeros"
 
 #: src/processarc.c:611
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - could not stat old file `%.250s' so not deleting it: %s"
-msgstr "dpkg: aviso - não foi possível apagar o ficheiro antigo `%.250s': %s\n"
+msgstr "dpkg: aviso - não foi possível fazer stat ao ficheiro antigo `%.250s' "
+"por isso não será apagado: %s"
 
 #: src/processarc.c:619
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - unable to delete old directory `%.250s': %s\n"
 msgstr "dpkg: aviso - não foi possível apagar o ficheiro antigo `%.250s': %s\n"
 
 #: src/processarc.c:623
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old conffile `%.250s' was an empty directory (and has now "
 "been deleted)\n"
 msgstr ""
-"dpkg: %s: aviso - ficheiro de configuração `%.250s' não é um ficheiro comum "
-"ou link simbólico (= `%s')\n"
+"dpkg: %s: aviso - ficheiro de configuração antigo `%.250s' era um "
+"directório vazio (e agora foi apagado)\n"
 
 #: src/processarc.c:653
-#, fuzzy, c-format
+#, c-format
 msgid "unable to stat other new file `%.250s'"
-msgstr "Não foi possível fazer fstat à parte do ficheiro `%.250s'"
+msgstr "Não foi possível fazer stat a outro novo ficheiro `%.250s'"
 
 #: src/processarc.c:664
 #, fuzzy, c-format
