--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.13.15~) UNRELEASED; urgency=low
 
+  [ Miguel Figueiredo ]
+  * Updated Translations:
+    - Portuguese (Miguel Figueiredo).
+
   [sas-guest]
   * initial po/hu.po added
 
