Use the same unified format as d-i for translations. Fix changelogs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,22 +1,18 @@
 dpkg (1.13.15~) UNRELEASED; urgency=low
 
-  [ Miguel Figueiredo ]
-  * Updated Translations:
-    - Portuguese (Miguel Figueiredo).
-
-  [sas-guest]
-  * initial po/hu.po added
-
   [ Guillem Jover ]
   * Add a missing closing parenthesis in a dpkg string (Jordi Mallach).
-  * Updated Translations:
-    - Catalan (Jordi Mallach).
-    - Swedish (Daniel Nylander).
 
   [ Christian Perrier ]
   * Updated Translations:
     - Brazilian Portuguese (Andre Luis Lopes). Closes: #352432
     - Galician (Jacobo Tarrio). Closes: #352443
+
+  [ Updated Translations ]
+  * Catalan (Jordi Mallach).
+  * Portuguese (Miguel Figueiredo).
+  * Swedish (Daniel Nylander).
+  * Hungarian (Szervác Attila): Added.
 
  -- Christian Perrier <bubulle@debian.org>  Mon, 13 Feb 2006 20:09:22 +0100
 
