--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.15~) UNRELEASED; urgency=low
+dpkg (1.13.15) unstable; urgency=low
 
   [ Guillem Jover ]
   * Add a missing closing parenthesis in a dpkg string (Jordi Mallach).
@@ -14,7 +14,7 @@ dpkg (1.13.15~) UNRELEASED; urgency=low
   * Swedish (Daniel Nylander).
   * Hungarian (Szervác Attila): Added.
 
- -- Christian Perrier <bubulle@debian.org>  Mon, 13 Feb 2006 20:09:22 +0100
+ -- Frank Lichtenheld <djpig@debian.org>  Wed, 15 Feb 2006 21:42:06 +0100
 
 dpkg (1.13.14) experimental; urgency=low
 
