--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-15  Frank Lichtenheld  <djpig@debian.org>
+
+	* configure.ac: Release 1.13.15.
+
 2006-02-13  Daniel Nylander  <info@danielnylander.se>
 
 	* po/sv.po updated.
