Move entry to correct ChangeLog

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -6,6 +6,10 @@
 
 	* hu.po: Added.
 
+2006-02-13  Daniel Nylander  <info@danielnylander.se>
+
+	* po/sv.po: Updated to 1011t.
+
 2006-02-13  Jacobo Tarrio  <jtarrio@trasno.net>
 
 	* gl.po: Updated to 1011t.
