--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-15  Frank Lichtenheld  <djpig@debian.org>
+
+	* pt.po: Fixed some errors that caused build
+	failures.
+
 2006-02-14  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 979t.
