Add missing changelog entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,13 @@
 
 	* configure.ac: Release 1.13.15.
 
+2006-02-15  SZERVÁC Attila  <sas@321.hu>
+
+	* man/hu/dpkg.cfg.5.hu.po: Added.
+	* man/hu/dpkg.cfg.5.hu.po.addendum: Likewise.
+	* man/hu/dselect.cfg.5.hu.po: Likewise.
+	* man/hu/dselect.cfg.5.hu.po.addendum: Likewise.
+
 2006-02-13  Jordi Mallach  <jordi@debian.org>
 
 	* src/processarc.c (process_archive): Add missing closing parenthesis
