Add hu in LINGUAS

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-02-15  Frank Lichtenheld  <djpig@debian.org>
 
+	* LINGUAS: Add hu.
+
 	* pt.po: Fixed some errors that caused build
 	failures.
 
